# meshcore-vanity-ed25519

./: .gitignore  Cargo.toml  README.md
src/: main.rs
