[package]
name = "vanity_ed25519"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
indicatif = "0.17"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
sha2 = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

